...
                            constraints:
                                BoxConstraints(minWidth: 175, maxWidth: 175),
                            margin: const EdgeInsets.only(
                              top: 10,
                            ),
                            child: Text(
                              "Number of Days to Keep Text Notes",
                              textAlign: TextAlign.left,
                              style:
                                  TextStyle(fontSize: 20, color: Colors.grey),
                            ),
                          ),
                          Container(width: 15),
...
                            constraints:
                                BoxConstraints(minWidth: 175, maxWidth: 175),
                            margin: const EdgeInsets.only(
                              top: 10,
                            ),
                            child: Text(
                              "Number of Seconds of Silence Before Stopping Recording",
                              textAlign: TextAlign.left,
                              style:
                                  TextStyle(fontSize: 20, color: Colors.grey),
                            ),
                          ),
                          Container(width: 15),
...
