...
}

class _SpeechScreenState extends State<SpeechScreen> {
  SpeechToText _speech = SpeechToText();

  bool _isListening = false;
  String _textSpeech = 'Press the mic button to start';

  /// Text note service to use for I/O operations against local system
  final TextNoteService textNoteService = new TextNoteService();

  // voice helper service
  final VoiceHelper voiceHelper = new VoiceHelper();
...
